--- a/app.json
+++ b/app.json
@@ -37,6 +37,10 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "tabroomApiBaseUrl": "https://api.tabroom.com/v1/",
+      "tabroomApiBasic": ""
     }
   }
 }
