--- a/app.json
+++ b/app.json
@@ -40,9 +40,9 @@
     },
     "extra": {
       "tabroomApiBaseUrl": "https://api.tabroom.com/v1/",
-      "tabroomApiBasic": ""
-      ,"backendBaseUrl": "http://localhost:8000/"
-      ,"nodePupBaseUrl": "http://localhost:3000/"
+      "tabroomApiBasic": "",
+      "backendBaseUrl": "http://192.168.68.73:8000/",
+      "nodePupBaseUrl": "http://192.168.68.73:3000/"
     }
   }
 }
