--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.11.0",
+    "axios-cookiejar-support": "^6.0.4",
     "cors": "^2.8.5",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
@@ -41,7 +43,9 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tough-cookie": "^5.1.2",
+    "uuid": "^12.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
