--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "axios-cookiejar-support": "^6.0.4",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
