Redesign navigation and screens, remove ballots/about tabs
Updated tab layout and titles, removed About and Ballots tabs and related screens, and refactored Account, Home, My Tournaments, and Tournaments screens for improved UI and authentication flow. Added new components and context for authentication, and updated API endpoints in app.json for local backend development.

--- a/app.json
+++ b/app.json
@@ -41,8 +41,8 @@
     "extra": {
       "tabroomApiBaseUrl": "https://api.tabroom.com/v1/",
       "tabroomApiBasic": "",
-      "backendBaseUrl": "http://10.0.0.5:3000/",
-      "nodePupBaseUrl": "http://10.0.0.5:3000/"
+      "backendBaseUrl": "http://localhost:8000/",
+      "nodePupBaseUrl": "http://localhost:8000/"
     }
   }
 }
