--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "expo start",
     "pup:start": "node ./server_js/server.js",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
